@@ -1,3 +1,8 @@
+Thu Aug 16 09:15:44 BST 2007  Richard Boulton <richard@lemurconsulting.com>
+
+	* secore/searchconnection.py: Retry the expand until we don't get a
+	  DatabaseModifiedError.
+
 Thu Aug 16 09:06:44 BST 2007  Richard Boulton <richard@lemurconsulting.com>
 
 	* secore/searchconnection.py,secore/searchconnection_doctest2.txt:
